@@ -1,4 +1,5 @@
 0.2.0
+Fixed dropping multiple files on dock to open.
 Fixed calandar not highlighting todays date.
 Pop up list tweaks.
 Pop up task lists now dont change order.
